--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
 <meta charset = "UTF-8">
 <link rel="stylesheet" href="assets/css/style.css">
-<title> GIPHY WORLD!</title>
+<title> TECH WORLD!</title>
 
 </head>
 
 <body>
+    <div id = "buttons"></div>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type = "text/javascript" src = "assets/javascript/app.js"></script>
 </body>
 </html>
