--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 <meta charset = "UTF-8">
 <link rel="stylesheet" href="assets/css/style.css">
+<link href="https://fonts.googleapis.com/css?family=Cardo:400,700|Oswald" rel="stylesheet">
 <title> TECH WORLD!</title>
 
 </head>
