--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 <meta charset = "UTF-8">
 <link rel="stylesheet" href="assets/css/style.css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css?family=Cardo:400,700|Oswald" rel="stylesheet">
 <title> TECH WORLD!</title>
 
@@ -11,7 +12,10 @@
 
 <body>
     <div id = "buttons"></div>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type = "text/javascript" src = "assets/javascript/app.js"></script>
+
+    <div id = "gifs">
+    </div>
 </body>
 </html>
