--- a/index.html
+++ b/index.html
@@ -9,13 +9,20 @@
 <title> TECH WORLD!</title>
 
 </head>
-
 <body>
     <div id = "buttons"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type = "text/javascript" src = "assets/javascript/app.js"></script>
+    
+    <form id = "gif-form">
+        <!-- <label for = "gif-input">Add a Gif!</label> -->
+        <input type = "text" id= "gif-input">
+        <input id = "add-gif" type="submit" value="Add a Gif!">
+    </form>
 
-    <div id = "gifs">
-    </div>
+    <div id = "gifs"></div>
+
+
+
 </body>
 </html>
