added some styles to it

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body>
+<body style="background-color:black;">
 
     <div class="container">
         <h1>Giphy World!</h1>
@@ -27,7 +27,6 @@
             <input type="text" id="gif-input">
             <input id="add-gif" type="submit" value="Add a Gif!">
         </form>
-
         <div id="gifs-view"></div>
 
     </div>
